@@ -23,66 +23,64 @@
 	     return 0; \
 	} while (0)
 
-int
-recv_ctcp_request(struct server *s, struct parsed_mesg *m)
+static int
+parse_ctcp(struct server *s, struct parsed_mesg *m, const char **cmd)
 {
 	char *command;
-	char *term;
-	const char *from;
-	const struct ctcp_handler *ctcp;
+	char *p;
 
-	if (!(from = m->from))
-		failf(s, "Received CTCP request from unknown sender");
+	if (!m->from)
+		failf(s, "Received CTCP from unknown sender");
 
 	if (*m->trailing != '\001')
-		failf(s, "Received malformed CTCP request from %s", from);
+		failf(s, "Received malformed CTCP from %s", m->from);
 
-	if ((term = strchr(m->trailing + 1, '\001')))
-		*term = 0;
+	if ((p = strchr(m->trailing + 1, '\001')))
+		*p = 0;
 
 	*m->trailing++ = 0;
 
 	if (!(command = getarg(&m->trailing, " ")))
-		failf(s, "Received empty CTCP request from %s", from);
+		failf(s, "Received empty CTCP from %s", m->from);
 
-	for (char *p = command; *p; p++)
+	for (p = command; *p; p++)
 		*p = toupper(*p);
+
+	*cmd = command;
+
+	return 0;
+}
+
+int
+recv_ctcp_request(struct server *s, struct parsed_mesg *m)
+{
+	const char *command;
+	const struct ctcp_handler *ctcp;
+	int ret;
+
+	if ((ret = parse_ctcp(s, m, &command)) != 0)
+		return ret;
 
 	if ((ctcp = ctcp_handler_lookup(command, strlen(command))))
 		return ctcp->f_request(s, m);
 
-	failf(s, "Received unsupported CTCP request '%s' from %s", command, from);
+	failf(s, "Received unsupported CTCP request '%s' from %s", command, m->from);
 }
 
 int
 recv_ctcp_response(struct server *s, struct parsed_mesg *m)
 {
-	char *command;
-	char *term;
-	const char *from;
+	const char *command;
 	const struct ctcp_handler *ctcp;
+	int ret;
 
-	if (!(from = m->from))
-		failf(s, "Received CTCP response from unknown sender");
-
-	if (*m->trailing != '\001')
-		failf(s, "Received malformed CTCP response from %s", from);
-
-	if ((term = strchr(m->trailing + 1, '\001')))
-		*term = 0;
-
-	*m->trailing++ = 0;
-
-	if (!(command = getarg(&m->trailing, " ")))
-		failf(s, "Received empty CTCP response from %s", from);
-
-	for (char *p = command; *p; p++)
-		*p = toupper(*p);
+	if ((ret = parse_ctcp(s, m, &command)) != 0)
+		return ret;
 
 	if ((ctcp = ctcp_handler_lookup(command, strlen(command))))
 		return ctcp->f_response(s, m);
 
-	failf(s, "Received unsupported CTCP response '%s' from %s", command, from);
+	failf(s, "Received unsupported CTCP response '%s' from %s", command, m->from);
 }
 
 static int
@@ -122,6 +120,17 @@ recv_ctcp_request_clientinfo(struct server *s, struct parsed_mesg *m)
 		server_msg(s, "CTCP CLIENTINFO from %s", m->from);
 
 	sendf(s, "NOTICE %s :\001CLIENTINFO ACTION CLIENTINFO PING SOURCE TIME VERSION\001", m->from);
+}
+
+static int
+recv_ctcp_request_finger(struct server *s, struct parsed_mesg *m)
+{
+	if (str_trim(&m->trailing))
+		server_msg(s, "CTCP FINGER from %s (%s)", m->from, m->trailing);
+	else
+		server_msg(s, "CTCP FINGER from %s", m->from);
+
+	sendf(s, "NOTICE %s :\001FINGER rirc v"VERSION" ("__DATE__")\001", m->from);
 }
 
 static int
@@ -173,6 +182,17 @@ recv_ctcp_request_time(struct server *s, struct parsed_mesg *m)
 }
 
 static int
+recv_ctcp_request_userinfo(struct server *s, struct parsed_mesg *m)
+{
+	if (str_trim(&m->trailing))
+		server_msg(s, "CTCP USERINFO from %s (%s)", m->from, m->trailing);
+	else
+		server_msg(s, "CTCP USERINFO from %s", m->from);
+
+	sendf(s, "NOTICE %s :\001USERINFO %s (%s)\001", m->from, s->nick, s->realname);
+}
+
+static int
 recv_ctcp_request_version(struct server *s, struct parsed_mesg *m)
 {
 	if (str_trim(&m->trailing))
@@ -190,6 +210,18 @@ recv_ctcp_response_clientinfo(struct server *s, struct parsed_mesg *m)
 		failf(s, "CTCP CLIENTINFO response from %s: empty message", m->from);
 
 	server_msg(s, "CTCP CLIENTINFO response from %s: %s", m->from, m->trailing);
+
+	return 0;
+}
+
+static int
+recv_ctcp_response_finger(struct server *s, struct parsed_mesg *m)
+{
+	if (!str_trim(&m->trailing))
+		failf(s, "CTCP FINGER response from %s: empty message", m->from);
+
+	server_msg(s, "CTCP FINGER response from %s: %s", m->from, m->trailing);
+
 	return 0;
 }
 
@@ -205,7 +237,6 @@ recv_ctcp_response_ping(struct server *s, struct parsed_mesg *m)
 	long unsigned t1_usec;
 	long unsigned t2_sec;
 	long unsigned t2_usec;
-	struct timeval t;
 
 	if (!(sec = getarg(&m->trailing, " ")))
 		failf(s, "CTCP PING response from %s: sec is NULL", m->from);
@@ -224,12 +255,12 @@ recv_ctcp_response_ping(struct server *s, struct parsed_mesg *m)
 	}
 
 #ifdef TESTING
-	(void)t;
-
 	t2_sec = 123;
 	t2_usec = 456789;
 #else
-	(void)gettimeofday(&t, NULL);
+	struct timeval t;
+
+	(void) gettimeofday(&t, NULL);
 
 	t2_sec = (long unsigned) t.tv_sec;
 	t2_usec = (long unsigned) t.tv_usec;
@@ -251,6 +282,7 @@ recv_ctcp_response_ping(struct server *s, struct parsed_mesg *m)
 	res_usec = res % 1000000;
 
 	server_msg(s, "CTCP PING response from %s: %llu.%llus", m->from, res_sec, res_usec);
+
 	return 0;
 }
 
@@ -261,6 +293,7 @@ recv_ctcp_response_source(struct server *s, struct parsed_mesg *m)
 		failf(s, "CTCP SOURCE response from %s: empty message", m->from);
 
 	server_msg(s, "CTCP SOURCE response from %s: %s", m->from, m->trailing);
+
 	return 0;
 }
 
@@ -271,6 +304,18 @@ recv_ctcp_response_time(struct server *s, struct parsed_mesg *m)
 		failf(s, "CTCP TIME response from %s: empty message", m->from);
 
 	server_msg(s, "CTCP TIME response from %s: %s", m->from, m->trailing);
+
+	return 0;
+}
+
+static int
+recv_ctcp_response_userinfo(struct server *s, struct parsed_mesg *m)
+{
+	if (!str_trim(&m->trailing))
+		failf(s, "CTCP USERINFO response from %s: empty message", m->from);
+
+	server_msg(s, "CTCP USERINFO response from %s: %s", m->from, m->trailing);
+
 	return 0;
 }
 
@@ -281,5 +326,6 @@ recv_ctcp_response_version(struct server *s, struct parsed_mesg *m)
 		failf(s, "CTCP VERSION response from %s: empty message", m->from);
 
 	server_msg(s, "CTCP VERSION response from %s: %s", m->from, m->trailing);
+
 	return 0;
 }
